--- a/index.html
+++ b/index.html
@@ -21,22 +21,22 @@
       </div>
       <button class="span-two">C</button>
       <button>DEL</button>
-      <button>+</button>
+      <button class="operand">+</button>
       <button>1</button>
       <button>2</button>
       <button>3</button>
-      <button>x</button>
+      <button class="operand">x</button>
       <button>4</button>
       <button>5</button>
       <button>6</button>
-      <button>+</button>
+      <button class="operand">+</button>
       <button>7</button>
       <button>8</button>
       <button>9</button>
-      <button>-</button>
+      <button class="operand">-</button>
       <button>.</button>
       <button>0</button>
-      <button class="span-two">=</button>
+      <button class="span-two operand">=</button>
     </div>
   </body>
 </html>
