--- a/index.html
+++ b/index.html
@@ -16,27 +16,29 @@
   <body>
     <div class="container">
       <div class="output">
-        <div class="previous-operand">11</div>
-        <div class="current-operand">111</div>
+        <div data-previous-operand class="previous-operand"></div>
+        <div data-current-operand class="current-operand"></div>
       </div>
-      <button class="span-two">C</button>
-      <button>DEL</button>
-      <button class="operand">+</button>
-      <button>1</button>
-      <button>2</button>
-      <button>3</button>
-      <button class="operand">x</button>
-      <button>4</button>
-      <button>5</button>
-      <button>6</button>
-      <button class="operand">+</button>
-      <button>7</button>
-      <button>8</button>
-      <button>9</button>
-      <button class="operand">-</button>
-      <button>.</button>
-      <button>0</button>
-      <button class="span-two operand">=</button>
+      <button data-clear class="span-two">C</button>
+      <button data-delete>DEL</button>
+      <button class="operand" data-operation>+</button>
+      <button data-number>1</button>
+      <button data-number>2</button>
+      <button data-number>3</button>
+      <button class="operand" data-operation>-</button>
+      <button data-number>4</button>
+      <button data-number>5</button>
+      <button data-number>6</button>
+      <button class="operand" data-operation>X</button>
+      <button data-number>7</button>
+      <button data-number>8</button>
+      <button data-number>9</button>
+      <button class="operand" data-operation>÷</button>
+      <button data-number>.</button>
+      <button data-number>0</button>
+      <button data-equals class="span-two operand">=</button>
     </div>
+
+    <script src="script.js"></script>
   </body>
 </html>
