--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="shortcut icon" href="images/logo.ico" type="image/x-icon" />
     <link rel="stylesheet" href="css/index.css" />
     <!-- font -->
     <link rel="preconnect" href="https://fonts.gstatic.com" />
@@ -11,7 +12,8 @@
       href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;500&display=swap"
       rel="stylesheet"
     />
-    <title>Calculator</title>
+    <link rel="manifest" href="/manifest.json" />
+    <title>EasyCalc</title>
   </head>
   <body>
     <div class="container">
@@ -39,6 +41,14 @@
       <button data-equals class="span-two operand">=</button>
     </div>
 
-    <script src="script.js"></script>
+    <script src="js/script.js"></script>
+    <script src="js/service-worker.js"></script>
+    <script>
+      window.addEventListener("load", () => {
+        if ("serviceWorker" in navigator) {
+          navigator.serviceWorker.register("service-worker.js");
+        }
+      });
+    </script>
   </body>
 </html>
